--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
 	<title>Welcome to alvianus.net</title>
 	<meta charset="utf-8" />
 	<meta name="description" content="welcome to alvianus.net" />
-	<link rel="stylesheet" href="./build/reset.css" />
-	<link rel="stylesheet" href="./build/style.css" />
+	<link rel="stylesheet" href="./asset/reset.css" />
+	<link rel="stylesheet" href="./asset/style.css" />
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141680234-1"></script>
 	<script>
@@ -24,6 +24,6 @@
 	<footer>
 			<small><a rel="external" href="https://www.linkedin.com/in/robertalvianus">My Linkedin Page</a> | <a rel="external" href="https://blog.alvianus.net/">My Blog</a></small>
 	</footer>
-	<script type="text/javascript" src="./build/typewriter-bundle.min.js"></script>
-	<script type="text/javascript" src="./build/tw-script.js"></script>
+	<script type="text/javascript" src="./asset/typewriter-bundle.min.js"></script>
+	<script type="text/javascript" src="./asset/tw-script.js"></script>
 </body>
