Update index file

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	<footer>
-			<small><a rel="external" href="https://www.linkedin.com/in/robertalvianus">My Linkedin Page</a> | <a rel="external" href="https://blog.alvianus.net/">My Blog</a></small>
+			<small>My Linkedin <a rel="external" href="https://www.linkedin.com/in/robertalvianus">Page</a> | <a rel="external" href="https://blog.alvianus.net/">My Blog</a> | This page runs on Kubernetes cluster </small>
 	</footer>
 	<script type="text/javascript" src="./asset/typewriter-bundle.min.js"></script>
 	<script type="text/javascript" src="./asset/tw-script.js"></script>
