Change httpd to nginx unprivilleged

--- a/html/index.html
+++ b/html/index.html
@@ -18,11 +18,11 @@
 <body>
 	<div class="main">
 		<div class="center">
-			<h1>Hello World</h1> <span id="text"></span>	
+			<h1>Hello World</h1> <span id="text"></span>
 		</div>
 	</div>
 	<footer>
-			<small>My Linkedin <a rel="external" href="https://www.linkedin.com/in/robertalvianus">Page</a> | <a rel="external" href="https://blog.alvianus.net/">My Blog</a> | This page runs on Kubernetes cluster </small>
+			<small>My Linkedin <a rel="external" href="https://www.linkedin.com/in/robertalvianus">Page</a> | <a rel="external" href="https://alvianus.net/">My Blog</a> | This page runs on Kubernetes cluster </small>
 	</footer>
 	<script type="text/javascript" src="./asset/typewriter-bundle.min.js"></script>
 	<script type="text/javascript" src="./asset/tw-script.js"></script>
